[package]
name = "incrust"
version = "0.0.6"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Template engine inspired by Jinja2"
repository = "https://github.com/alexander-irbis/incrust"
#documentation = ""
keywords = ["web", "template", "jinja2"]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
#build = "build.rs"
publish = true


[dependencies]
clippy          = { version = "0.0", optional = true }
marksman_escape = "0.1.2"
log             = "0.3"
maplit          = "0.1"
nom             = "~1.2.2"

[features]
default         = []
dev             = ["clippy"]
