[package]
name = "incrust"
version = "0.2.15"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Template engine inspired by Jinja2"
keywords = ["template", "jinja2", "django", "twig", "swig"]
categories = ["parser-implementations", "template-engine", "web-programming"]
readme = "README.md"
homepage = "https://github.com/alexander-irbis/incrust"
repository = "https://github.com/alexander-irbis/incrust"
documentation = "https://docs.rs/incrust/"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
#build = "build.rs"
publish = true

[badges]
travis-ci = { repository = "alexander-irbis/incrust" }

[dependencies]
marksman_escape = "0.1.2"
log             = "0.3"
maplit          = "0.1"
nom             = { version = "^2.0", features = ["verbose-errors"] }

[features]
default         = []
verbose         = []
quiet           = []
