[package]
name = "incrust-format"
version = "0.4.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Formatting routines used in the Incrust template engine."
keywords = ["format", "text"]
categories = ["parser-implementations", "template-engine", "web-programming"]
readme = "README.md"
homepage = "https://github.com/alexander-irbis/incrust"
repository = "https://github.com/alexander-irbis/incrust"
documentation = "https://docs.rs/incrust/"
edition = "2018"
publish = true

[badges]
travis-ci = { repository = "alexander-irbis/incrust" }


[features]
default         = []
verbose         = []
quiet           = []


[dependencies]
marksman_escape = "0.1.2"
log             = "0.4"
url             = "1.4"
