[package]
name = "incrust-core"
version = "0.5.0-dev.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Template engine inspired by Jinja2"
keywords = ["template", "jinja2", "django", "twig", "swig"]
categories = ["parser-implementations", "template-engine", "web-programming"]
readme = "README.md"
homepage = "https://github.com/irbis-labs/incrust"
repository = "https://github.com/irbis-labs/incrust"
documentation = "https://docs.rs/incrust/"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
#build = "build.rs"
edition = "2021"
publish = false

[badges]
travis-ci = { repository = "irbis-labs/incrust" }


[dependencies]
#derive_more = "0.99"
log = "0.4"
