[package]
name = "incrust-template"
version = "0.5.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Template engine inspired by Jinja2"
keywords = ["template", "jinja2", "django", "twig", "swig"]
categories = ["parser-implementations", "template-engine", "web-programming"]
readme = "README.md"
homepage = "https://github.com/alexander-irbis/incrust"
repository = "https://github.com/alexander-irbis/incrust"
documentation = "https://docs.rs/incrust/"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
#build = "build.rs"
edition = "2021"
publish = false

[badges]
travis-ci = { repository = "alexander-irbis/incrust" }


[dependencies]
#bigdecimal = "0.3"
#derive_more = "0.99"
log = "0.4"
#nom = { version = "4.0", features = ["verbose-errors"] }
#num-bigint = "0.4"
#thiserror = "1.0"
#url = "2"

#format = { package = "incrust-format", path = "../format" }
